# qet_tb_generator-plugin

./: .gitignore  PKG-INFO  QET_TB_Generator.spec  QET_TB_Generator_Setup.iss  QET_TerminalBlock_Generator.spec  README.md  auto_dist.bat  bridge_debug.txt  debug_drawing.txt  main.spec  pyproject.toml  run.py  run.spec  setup.py  tmp_legend.txt
qet_tb_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
res/sample_projects/: CLAUGERV1.qet  THERMO_v0.8dev.qet  achim_ns.qet  achim_ns_1.qet  achim_test.qet  achim_test_1.qet  control.qet  control_simple.qet  sample_6.qet  sample_7.qet  sample_8.qet
res/sample_projects/achim2/: Basis (copy).qet  Basis.qet  Basis_2.qet  Basis_4.qet
res/sample_projects/achim_bugs/: Basic_t.qet  Test1.qet  Test2.qet  Test3.qet  Test4.qet  basic.qet
res/sample_projects/jaroslaw2/: test_.qet  test__1.qet  test__2.qet
src/: main.py  qetproject.py  terminalblock.py
src/qet_tb_generator/: main.py  qetproject.py
